<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paciente">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputCamas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/numero_de_camas"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputOculos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/numero_de_oculos"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLuvas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/numero_de_luvas"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputMascaras"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/numero_de_mascaras"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputVentiladores"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/numero_de_ventiladores"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputCusto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/custos"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/buttonGravar"
                android:layout_width="170dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:text="@string/gravar"
                android:layout_marginTop="10dp"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>